# cixtool

./: CMakeLists.txt  Future Computing.pptx  Knowledge-Tree.pptx  README.md  TechnicalManagementOnProject.pptx  build.sh
include/: host.h
pysrc/: main.py  setup.py  toolgui.py
src/: host.cpp  wrapper.cpp
