CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
project (host)

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS  "$ENV{CXXFLAGS} -O0 -Wall -Werror -g -fPIC")  
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_VERBOSE_MAKEFILE ON)
ADD_COMPILE_OPTIONS(-std=gnu++11)

#SOURCE_FILE
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src host)
FILE(GLOB SRC_LIST "${PROJECT_SOURCE_DIR}/src/*.cpp")
#Print SRC_LIST 
MESSAGE(STATUS ${SRC_LIST})

#INCLUDE_FILE
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

#CREATE_SHARED_LIBRARY- hosttest.so
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(hosttest SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(hosttest PROPERTIES OUTPUT_NAME "hosttest" LINK_OPTIONS "-fPIC")

